<resources>
    <string name="app_name">PriorityTaskDemo6-java</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="show_time">Time</string>
    <string name="start_button">start</string>
    <string name="start_time">start timer</string>
    <string name="pain_name">Up Now working</string>
    <string name="task">Task name</string>
    <string name="task_type">null</string>
    <string name="addNewMaterial">Show all  Materials </string>
    <string name="estmeted_time">estmeted_time</string>
    <string name="material_list">Material List</string>
    <string name="title_main_page">Priority Task</string>
    <string name="sub_title_main_page">Let\'s sort your task</string>
    <string-array name="numbers_of_time">
        <item> </item>
        <item>0 </item>
        <item>1 </item>
        <item>2 </item>
        <item>3 </item>
        <item>4 </item>
        <item>5 </item>
    </string-array>
    <string-array name="show_date">
        <item></item>
        <item>Hours</item>
        <item>Day</item>
        <item>Month</item>
    </string-array>
</resources>
