<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_marginLeft="10dp"
android:layout_height="match_parent">

<RelativeLayout
    android:padding="16dp"
    android:paddingEnd="16dp"
    android:layout_width="match_parent"
    android:layout_gravity="center"
    android:layout_height="match_parent">

    <TextView
        android:layout_margin="15dp"
        android:id="@+id/pain_name"
        android:textAlignment="center"
        android:textSize="25sp"
        android:text="@string/pain_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <View
        android:id="@+id/line1"
        android:background="@color/WhiteSmoke"
        android:layout_below="@id/pain_name"
        android:layout_width="match_parent"
        android:layout_height="3dp"/>

    <TextView
        android:layout_marginLeft="10dp"
        android:layout_margin="15dp"
        android:textAlignment="center"
        android:textSize="20sp"
        android:text="@string/task"
        android:id="@+id/task_name"
        android:layout_below="@id/line1"
        android:layout_alignParentLeft="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:textSize="20sp"
        android:layout_margin="15dp"
        android:layout_marginLeft="30dp"
        android:layout_below="@id/line1"
        android:id="@+id/task_type"
        android:layout_toRightOf="@id/task_name"
        android:text="@string/task_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/est_time"
        android:layout_marginLeft="10dp"
        android:textSize="20sp"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/task_name"
        android:layout_margin="15dp"
        android:text="@string/estmeted_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/layout_spinner"
        android:layout_below="@id/task_name"
        android:weightSum="2"
        android:gravity="center"
        android:layout_toRightOf="@id/est_time"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <Spinner
        android:layout_gravity="center"
        android:id="@+id/sp_numbers"
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Spinner
        android:id="@+id/sp_date"
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        />
</LinearLayout>
    <TextView
        android:layout_below="@id/est_time"
        android:layout_marginLeft="10dp"
        android:layout_margin="15dp"
        android:textSize="20sp"
        android:id="@+id/cal_time"
        android:text="@string/start_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_below="@+id/layout_spinner"
        android:layout_toRightOf="@+id/est_time"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        android:weightSum="2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_marginRight="5dp"
            android:id="@+id/txvTimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/est_time"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:clickable="true"
            android:text="@string/show_time"
            android:layout_gravity="center"
            android:textSize="22sp" />
        <Button
            android:text="@string/start_button"
            android:id="@+id/start_button"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
</RelativeLayout>
</android.support.v7.widget.CardView>
